# crosszero-server

./: .clang-format  CMakeLists.txt  README.md
src/: Database.h  main.cc
src/util/: crypto.hpp  format.hpp  types.hpp
